--- a/sass/desktop/pages/team/_notifications.sass
+++ b/sass/desktop/pages/team/_notifications.sass
@@ -12,6 +12,8 @@
     overflow: hidden
     margin-bottom: 0.5rem
     font-size: 11px
+    p
+        margin-bottom: 0
 
 .notifications__title
     font-size: 20px
@@ -28,3 +30,5 @@
 
 .preview__content
     color: #1E1E1E
+    p
+        margin-bottom: 0
